# bboxes

./: LICENSE  README.md  pyproject.toml
src/bboxes/: __init__.py  bbox.py
tests/: test_bbox.py
